python-jenkins-argocd-k8s/k8s/django-complete.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: django-app
  labels:
    app: django-app

spec:
  replicas: 3

  selector:
    matchLabels:
      app: django-app

  template:
    metadata:
      labels:
        app: django-app

    spec:
      containers:
      - name: django-app

        image: django-todo-app:latest

        imagePullPolicy: Never

        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service

metadata:
  name: django-service

spec:
  selector:
    app: django-app

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: ClusterIP
